--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="记事本"
         android:textColor="#000000"
         android:textSize="24dp" />
@@ -19,27 +20,58 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <EditText
-            android:layout_width="match_parent"
+            android:id="@+id/et_account"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:background="#E1E1E1"
+            android:padding="16dp"
             android:hint="输入账号"
             android:textColor="#000000"
             android:textSize="16dp" />
 
         <EditText
-            android:layout_width="match_parent"
+            android:id="@+id/et_password"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:background="#E1E1E1"
+            android:layout_marginTop="8dp"
+            android:inputType="textPassword"
+            android:padding="16dp"
             android:hint="输入密码"
             android:textColor="#000000"
             android:textSize="16dp" />
 
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="#000000"
+            android:textColor="#ffffff"
             android:text="登录"/>
+
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="#000000"
+            android:textColor="#ffffff"
+            android:text="去注册"/>
+
+        <Button
+            android:id="@+id/btn_reset_password"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="#000000"
+            android:textColor="#ffffff"
+            android:text="重置密码"/>
 
     </LinearLayout>
 
