--- a/app/src/main/res/layout/item_book_mark.xml
+++ b/app/src/main/res/layout/item_book_mark.xml
@@ -5,21 +5,33 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tv_content"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text="内容"
-        android:textSize="18dp" />
+        android:padding="16dp"
+        android:background="#DDDDDD"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:text="内容"
+            android:textSize="20dp" />
 
 
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:text="19:09"
-        android:textSize="16dp" />
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="end"
+            android:text="19:09"
+            android:textSize="16dp" />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
